[package]
name = "converter"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
clap = "4.5.54"
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["client", "http1"] }
hyper-util = { version = "0.1.19", features = ["tokio"] }
openssl = { version = "0.10.75", features = ["vendored"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["macros", "net", "rt-multi-thread"] }
tokio-openssl = "0.6.5"
