[package]
name = "converter"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
clap = "4.5.54"
const_format = "0.2.35"
http-body-util = "0.1.3"
hyper = { version = "1.9.0", features = ["client", "http1"] }
hyper-rustls = { version = "0.27.9", features = ["http2"] }
hyper-util = { version = "0.1.19", features = ["tokio"] }
openssl = { version = "0.10.75", features = ["vendored"] }
prost = "0.14.3"
rustls = "0.23.40"
rustls-post-quantum = "0.2.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
tokio = { version = "1.49.0", features = ["macros", "net", "rt-multi-thread"] }
tokio-openssl = "0.6.5"
tokio-rustls = "0.26.4"
tokio-stream = "0.1.18"
tonic = { version = "0.14.6", features = ["transport", "tls-aws-lc"] }
tonic-prost = "0.14.6"
tower = "0.5.3"
tower-http = { version = "0.6.11", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
x509-parser = "0.18.1"

[build-dependencies]
tonic-prost-build = "0.14.6"
